Add Style CSS file

--- a/accommodations.html
+++ b/accommodations.html
@@ -38,6 +38,6 @@
 <img src="http://conradhotels3.hilton.com/resources/media/ch/MLEHICI/en_US/img/hotel/roomtypeimages/large/CN_sunsetwater01_4_750x272_FitToBoxSmallDimension_Center.jpg" alt="Water Villa  Bedroom">
 <img src="http://conradhotels3.hilton.com/resources/media/ch/MLEHICI/en_US/img/shared/full_page_image_gallery/main/CN_dlxbeachvillatopdown_12_700x525_FitToBoxSmallDimension_Center.jpg" alt="Water Villa Floorplan">
 
-<a href="index.html">Home Page</a>
+<p class="center"><a href="index.html">Home Page</a></p>
   </body>
 </html>
