--- a/activities.html
+++ b/activities.html
@@ -26,6 +26,6 @@
 
    <img src="http://conradhotels3.hilton.com/resources/media/ch/MLEHICI/en_US/img/shared/carousel/main/CN_kayak_5_750x350_FitToBoxSmallDimension_LowerCenter.jpg" alt text="kayaking">
 
-   <a href="index.html">Home Page</a>
+   <p class="center"><a href="index.html">Home Page</a></p>
   </body>
 </html>
