--- a/contact-information.html
+++ b/contact-information.html
@@ -7,13 +7,13 @@
   <body>
 
     <h1>Contact us:</h1>
-    <ul>
+    <ul style="list-style: none;" class="center">
       <li>Phone Number: +1 432 989 7444</li>
       <li>Email: richirich@walthyindividual.com</li>
       <li>Skype: imsuperrich</li>
     </ul>
 
-    <a href="index.html">Home Page</a>
+    <p class="center"><a href="index.html">Home Page</a></p>
 
   </body>
 </html>
