--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -15,8 +15,12 @@
   <li>Book Boat Tickets: They offer tickets to destinations across almost the entire Eternal Sea. You can island hop all the way from Mtropolis to SinCity.</li>
   <li>Book Minibus Tickets: Buy your Minibus Tickets in advance on connecting routes to Metropolis and the private island.</li>
   <li>Book Private Taxis: They also offer Private cars and vans from the private island to the airport.</li>
-</uo>
+ </uo>
 
-<a href="index.html">Home Page</a>
+<br>
+
+<img src="http://www.howtobuyaprivateisland.com/images/island-yacht.jpg" alt text="boat">
+
+<p class="center"><a href="index.html">Home Page</a></p>
   </body>
 </html>
